--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.13",
     "@reduxjs/toolkit": "^1.3.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.7.5"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,11 +21,8 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "@types/lodash": "^4.14.150",
+    "@types/react-redux": "^7.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
