--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.13",
+    "@mrblenny/react-flow-chart": "0.0.13",
     "@reduxjs/toolkit": "^1.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
