--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
