--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
-    "@types/lodash": "^4.14.150",
-    "@types/react-redux": "^7.1.8"
+    "@types/react-redux": "^7.1.8",
+    "@types/uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
