--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
-    "@types/react-redux": "^7.1.8",
-    "@types/uuid": "^7.0.3"
+    "@types/react-redux": "^7.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
