--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "deployment-pipeline",
+  "description": "Implementation of @mrblenny/react-flow-chart",
+  "author": "David Anitoiu <david.anitoiu@gmail.com>",
+  "repository": "git@github.com:davidanitoiu/deployment-pipeline.git",
+  "license": "MIT",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
