--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:davidanitoiu/deployment-pipeline.git",
   "license": "MIT",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
