--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
   "private": true,
   "homepage": "https://davidanitoiu.github.io/deployment-pipeline",
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.9.13",
+    "@material-ui/styles": "^4.10.0",
     "@mrblenny/react-flow-chart": "0.0.13",
-    "@reduxjs/toolkit": "^1.3.5",
+    "@reduxjs/toolkit": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0",
-    "typescript": "^3.7.5"
+    "react-redux": "^7.2.1",
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "^12.12.38",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/react-redux": "^7.1.8",
-    "gh-pages": "^3.0.0"
+    "@types/lodash": "^4.14.161",
+    "@types/node": "^12.12.55",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
